0.1.2

0.1.1

2018-10-02  Brecht Sanders  https://github.com/brechtsanders/

  * fix missing multifinder_replace in CMakeLists.txt
  * added struct multifinder_count_patterns()
  * added individual pattern counts to multifinder_count

0.1.0

2018-10-01  Brecht Sanders  https://github.com/brechtsanders/

  * initial release
