@@ -1,5 +1,9 @@
 0.1.2
 
+2018-10-03  Brecht Sanders  https://github.com/brechtsanders/
+
+  * search pattern won't be added if it was already added
+
 0.1.1
 
 2018-10-02  Brecht Sanders  https://github.com/brechtsanders/
